sample-app/manifests-without-helm/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: awesome
  labels:
    app: awesome
    released-by: kubectl-apply
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: awesome.dev.vemessage.com
    http:
      paths:
      - backend:
          serviceName: awesome
          servicePort: http
